--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,3 @@
 [pytest]
-addopts = --pyargs tests heasoftpy/packages
+#addopts = --pyargs tests heasoftpy/packages
+addopts = --pyargs heasoftpy/packages
