removed a temporary line in pytest.ini that was meant to be removed in the previous commit

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,2 @@
 [pytest]
-#addopts = --pyargs tests heasoftpy/packages
-addopts = --pyargs heasoftpy/packages
+addopts = --pyargs tests heasoftpy/packages
