--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,25 @@ __pycache__
 .ipynb_checkpoints
 *egg*
 build
-fcn
+notebooks/*html
+notebooks/styles
+fcn*
+heasoftpy/_modules.py
+heasoftpy/attitude
+heasoftpy/calet
+heasoftpy/demo
+heasoftpy/ftools
+heasoftpy/heacore
+heasoftpy/heagen
+heasoftpy/heasim
+heasoftpy/heasptools
+heasoftpy/heatools
+heasoftpy/hitomixrism
+heasoftpy/integral
+heasoftpy/ixpe
+heasoftpy/maxi
+heasoftpy/nicer
+heasoftpy/nustar
+heasoftpy/suzaku
+heasoftpy/swift
+heasoftpy/Xspec
